codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_fresh_session_transitions.snap
---
source: tui/src/startup_draft_tests.rs
expression: "snapshots.join(\"\\n---\\n\")"
---
resume lookup fallback:
before:
╭──────────────────────────────────────────────╮
│ >_ UnieAI Code (v<VERSION>) │
│                                              │
│ model:     loading   /model to change        │
│ directory: loading                           │
╰──────────────────────────────────────────────╯
  Resuming session…

› draft while loading


after:
╭──────────────────────────────────────────────╮
│ >_ UnieAI Code (v<VERSION>) │
│                                              │
│ model:     loading   /model to change        │
│ directory: loading                           │
╰──────────────────────────────────────────────╯


› draft while loading


---
fork lookup fallback:
before:
╭──────────────────────────────────────────────╮
│ >_ UnieAI Code (v<VERSION>) │
│                                              │
│ model:     loading   /model to change        │
│ directory: loading                           │
╰──────────────────────────────────────────────╯
  Forking session…

› draft while loading


after:
╭──────────────────────────────────────────────╮
│ >_ UnieAI Code (v<VERSION>) │
│                                              │
│ model:     loading   /model to change        │
│ directory: loading                           │
╰──────────────────────────────────────────────╯


› draft while loading


---
resume picker cancellation:
before:
hidden while picker owns input
after:
╭──────────────────────────────────────────────╮
│ >_ UnieAI Code (v<VERSION>) │
│                                              │
│ model:     loading   /model to change        │
│ directory: loading                           │
╰──────────────────────────────────────────────╯


› Ask UnieAI Code to do anything

  ? for shortcuts
---
fork picker cancellation:
before:
hidden while picker owns input
after:
╭──────────────────────────────────────────────╮
│ >_ UnieAI Code (v<VERSION>) │
│                                              │
│ model:     loading   /model to change        │
│ directory: loading                           │
╰──────────────────────────────────────────────╯


› Ask UnieAI Code to do anything

  ? for shortcuts
